# webtail-rs

./: Cargo.toml  LICENSE  README.md
docs/: USAGE.md
examples/: webtail.conf
src/: args.rs  cli.yml  lib.rs  main.rs  structs.rs  utils.rs  worker.rs
static/: index.html
