[package]
name = "webtail-rs"
version = "0.1.0"
authors = ["Edu4rdSHL <edu4rdshl@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.10", features = ["sse"] }
rocket_contrib = "0.4.7"
clap = { version = "2.33.3", features = ["yaml"] }
rayon = "1.5.1"
